data/derived/sp14/progs/unify/prog2899.ml.out
Characters 57-58:
  let (x,y) = f b in
              ^
Error: This expression has type 'a * 'b
       This is not a function; it cannot be applied.
